--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "watch:windows": "set NODE_ENV=test&&nodemon server.js",
     "dev": "npm-run-all --parallel watch:webpack watch:reload",
     "dev:windows": "npm-run-all --parallel watch:webpack watch:windows",
+    "dev:front": "webpack-dev-server --hot",
     "serve": "NODE_ENV=production node server.js"
   },
   "repository": {
@@ -55,6 +56,7 @@
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-react": "^6.10.0",
     "eslint-plugin-standard": "^2.0.1",
-    "webpack": "^2.2.1"
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.4.2"
   }
 }
