--- a/package.json
+++ b/package.json
@@ -37,12 +37,12 @@
     "compression": "^1.6.2",
     "express": "^4.14.1",
     "lodash": "^4.17.4",
-    "preact": "^7.2.0",
-    "preact-compat": "~3.13.1",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-onclickoutside": "^5.9.0",
-    "react-router-dom": "^4.0.0"
+    "preact": "7.2.0",
+    "preact-compat": "3.13.1",
+    "react": "15.4.2",
+    "react-dom": "15.4.2",
+    "react-onclickoutside": "5.9.0",
+    "react-router-dom": "4.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.23.0",
@@ -56,7 +56,7 @@
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-react": "^6.10.0",
     "eslint-plugin-standard": "^2.0.1",
-    "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.4.2"
+    "webpack": "2.2.1",
+    "webpack-dev-server": "2.4.2"
   }
 }
